client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: #Specification of the deployment
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels: 
        app: client
    spec:
      containers:
        - name: client
          image: laithharb/web-app:v2
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports: 
    - port: 3000
      targetPort: 3000
