server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec: #Specification of the deployment
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata: 
      name: server-pod
      labels: 
        app: server
    spec: #Specification of the pod
      containers:
        - name : server
          image: laithharb/server:v2
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
---
#Service to acces the deployment
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec: 
  type: ClusterIP
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
